[package]
name = "linuxmemparser"
version = "0.1.0"
edition = "2021"

[dependencies]
# Memory and parsing
memmap2 = "0.9"
goblin = "0.8"
memchr = "2.7"
regex = "1.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Output formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
prettytable-rs = "0.10"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
chrono = "0.4"
indicatif = "0.17"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
criterion = "0.5"
